fix: address round-1 evaluator findings
- javadoc on every new public member (plugin/image-config accessors, builders,
  UserLocation getters); ImageConfig getter docs no longer read as setters
- OpenRouterPlugin.of javadoc no longer contradicts its signature
- OpenRouterImageConfig.options() returns an insertion-ordered unmodifiable copy
- throwOnError() no longer NPEs on a non-object error field; errorCode() returns
  null for non-numeric codes
- buildSyntheticResponseJson made package-private for tests; tests for the
  synthetic response with/without usage and native finish reason, the generic
  plugin id-override guard, clearing modalities via an empty list and the
  malformed/non-numeric error shapes
- README features/examples enumeration extended for 1.6.0; response details
  example now shows reasoningDetails(), costDetails() and the error family